--- a/debug/index.html
+++ b/debug/index.html
@@ -73,20 +73,20 @@
 		<link href="../_app/immutable/assets/0.CBqqcZo2.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.qjQblOjY.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.CAjptZ9z.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/utils.CAqZFEvz.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.-oI_k6G5.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.Cbtcq7j4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.CpXVhQZh.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.DoALYEGI.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/language.Czrv4BRi.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.mFykl5Xo.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.DtFYEW8W.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.CWI7YaRx.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Toaster.B8boEK3D.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.DWInDEwy.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.MVGgtbH1.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.CZSYdh-0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.Jmv-Gx2Q.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/utils.DjiPo3H_.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.4e1ancKm.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.RpwSgWly.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.BX_fekq_.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.B5QQfjO-.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/language.CLV-v9o_.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.CYDXZ1si.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.Bz39ODKF.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.BN1NQ2jE.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.0p6MPxnL.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.Bvh0JLfW.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.Bh_OBVkK.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -102,7 +102,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_11hgiu4 = {
+					__sveltekit_hpijem = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -111,8 +111,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.qjQblOjY.js"),
-						import("../_app/immutable/entry/app.Cbtcq7j4.js")
+						import("../_app/immutable/entry/start.CZSYdh-0.js"),
+						import("../_app/immutable/entry/app.RpwSgWly.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
