--- a/debug/index.html
+++ b/debug/index.html
@@ -73,16 +73,16 @@
 		<link href="../_app/immutable/assets/0.B9UqEcue.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.nc-dX2D7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.DYpM8yI_.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.B1_Q_kZr.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.CDZZ69ko.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.CVjiVCGq.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.C1-xVPKz.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.CEG5u3iL.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DKXgmFid.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.1MAZtDoG.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.DjjKVpGB.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.B3O7J5S8.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/language.BJMII6r1.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.Bv4rd9lf.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.BFXyJ_GL.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.D84vRTIo.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.DDpqDZ5W.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.BUTmABTT.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.DCI050Q_.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.CjI8Gwdp.js">
@@ -98,11 +98,11 @@ overflow: hidden;
 clip: rect(0, 0, 0, 0);
 white-space: nowrap;
 border-width: 0;
-transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]--><!----> <!--[!--><!--[!--><button class="focus-visible:ring-ring inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border-input bg-background hover:bg-accent hover:text-accent-foreground border shadow-sm h-9 px-4 py-2 my-1 w-full min-w-[256px] md:w-2/3 lg:w-1/2 2xl:w-1/3" type="button"><!---->Fetch<!----></button><!--]--><!--]--><!--]--></div><!----><!----> <footer class="flex flex-col items-center justify-between gap-1 p-2 pb-3 text-xs text-muted-foreground md:flex-row md:gap-3 md:px-4 md:py-3"><div>© <a class="hover:text-foreground" href="https://ma.cyou/" target="_blank">ma.cyou</a> (<a class="hover:text-foreground" href="https://github.com/mapagmataas1331/" target="_blank">Mapagmataas</a>) 2023 - 2024</div> <div class="flex gap-1 sm:gap-2"><!--[--><a href="https://ma.cyou/" class="hover:text-foreground">Author</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-12" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://opencollege-nsk.ru/" class="hover:text-foreground">NGOK's site</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-13" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://docs.google.com/spreadsheets/d/1FiMov0r4UUDKT6A56NWMImpoUakDC2YDevgaOpJQ7Qc/" class="hover:text-foreground">Schedule table</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-14" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://github.com/Mapagmataas1331/NGOK-Better-schedule" class="hover:text-foreground">Source code</a> <!--[!--><!--]--><!--]--></div></footer><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]--><!----> <!--[!--><!--[!--><button class="focus-visible:ring-ring inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border-input bg-background hover:bg-accent hover:text-accent-foreground border shadow-sm h-9 px-4 py-2 my-1 w-full min-w-[256px] md:w-2/3 lg:w-1/2 2xl:w-1/3" type="button"><!---->Fetch<!----></button><!--]--><!--]--><!--]--></div><!----><!----> <footer class="flex flex-col items-center justify-between gap-1 p-2 pb-3 text-xs text-muted-foreground md:flex-row md:gap-3 md:px-4 md:py-3"><div>© <a class="hover:text-foreground" href="https://ma.cyou/">ma.cyou</a> (<a class="hover:text-foreground" href="https://github.com/mapagmataas1331/">Mapagmataas</a>) 2023 - 2024</div> <div class="flex gap-1 sm:gap-2"><!--[--><a href="https://ma.cyou/" class="hover:text-foreground">Author</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-12" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://opencollege-nsk.ru/" class="hover:text-foreground">NGOK's site</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-13" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://docs.google.com/spreadsheets/d/1FiMov0r4UUDKT6A56NWMImpoUakDC2YDevgaOpJQ7Qc/" class="hover:text-foreground">Schedule table</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-14" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://github.com/Mapagmataas1331/NGOK-Better-schedule" class="hover:text-foreground">Source code</a> <!--[!--><!--]--><!--]--></div></footer><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_5k2pxt = {
+					__sveltekit_11bu1ju = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -111,8 +111,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.nc-dX2D7.js"),
-						import("../_app/immutable/entry/app.CEG5u3iL.js")
+						import("../_app/immutable/entry/start.B1_Q_kZr.js"),
+						import("../_app/immutable/entry/app.DKXgmFid.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
